Revision history for Git-Background

{{$NEXT}}

0.002  2022-01-01 19:40:33 UTC

  - API change to use Future

0.001  2021-12-20 20:01:35 UTC

  - Initial release