@@ -17,7 +17,7 @@ my %WriteMakefileArgs = (
     PREREQ_PM        => {
         Carp               => 0,
         'File::Temp'       => 0,
-        Future             => '0.05',
+        Future             => '0.40',
         'Proc::Background' => '1.30',
         'Scalar::Util'     => 0,
         parent             => 0,
@@ -50,7 +50,7 @@ my %FallbackPrereqs = (
     'File::Spec'            => 0,
     'File::Spec::Functions' => 0,
     'File::Temp'            => 0,
-    Future                  => '0.05',
+    Future                  => '0.40',
     'Proc::Background'      => '1.30',
     'Scalar::Util'          => 0,
     'Test::More'            => '0.88',
